--- a/3DRenderer.vcxproj
+++ b/3DRenderer.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="src\core\Rasterizer.cpp" />
     <ClCompile Include="src\core\Renderer.cpp" />
     <ClCompile Include="src\geometry\Mesh.cpp" />
+    <ClCompile Include="src\geometry\MeshImporter.cpp" />
     <ClCompile Include="src\geometry\Shape.cpp" />
     <ClCompile Include="src\geometry\Vertex.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -149,6 +150,7 @@
     <ClInclude Include="src\core\Rasterizer.h" />
     <ClInclude Include="src\core\Renderer.h" />
     <ClInclude Include="src\geometry\Mesh.h" />
+    <ClInclude Include="src\geometry\MeshImporter.h" />
     <ClInclude Include="src\geometry\Shape.h" />
     <ClInclude Include="src\geometry\Vertex.h" />
     <ClInclude Include="src\math\Math.h" />
